--- a/src/components/HomePage/About.astro
+++ b/src/components/HomePage/About.astro
@@ -4,12 +4,14 @@ const {aboutHeader, aboutImage, aboutText, requestQuoteBtn, aboutAltText, contac
 
 ---
 
-<section class="about-section container">
+<section class="about-section">
     <h2>{aboutHeader}</h2>
-    <div class="about-info">
-        <p>{aboutText}</p>
-        <a href="#">{requestQuoteBtn}</a>
-        <a href="#">{contactUsBtn}</a>
+    <div class="about-info container">
+        <div class="about-flex">
+            <p>{aboutText}</p>
+            <a href="/request-quote" class="about-request">{requestQuoteBtn}</a>
+            <a href="/contact-us" class="about-contact">{contactUsBtn}</a>
+        </div>
         <img src={aboutImage} alt={aboutAltText}>
     </div>
 </section>
