--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -142,7 +142,7 @@
         img {
             border-radius: 12px;
         }
-        
+
         .pressure-seal-section {
             display: flex;
             flex-direction: column;
@@ -183,7 +183,8 @@
     background-color: $primary-blue;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    display: flex;;
+    display: flex;
+    ;
     flex-direction: column;
     gap: 1rem;
 
@@ -198,5 +199,48 @@
 
     a {
         @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
+    }
+}
+
+.about-section {
+    margin: 6rem 0 6rem 0;
+
+    h2 {
+        @include yellow-header-products;
+        padding-top: 27px;
+        padding-bottom: 27px;
+    }
+
+    .about-info {
+        background-color: $tertiary-dark-blue;
+        color: $white;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding-top: 3rem;
+        padding-bottom: 1rem;
+        border-radius: 15px;
+
+        img {
+            border-radius: 12px;
+        }
+
+        .about-flex {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            .about-request {
+                @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
+                display: block;
+            }
+    
+            .about-contact {
+                @include btn ($tertiary-dark-blue, $white, 0);
+                display: block;
+                border: 2px solid $white;
+            }
+        }
+
     }
 }
