--- a/src/components/PressureSeal/SecureFold.astro
+++ b/src/components/PressureSeal/SecureFold.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 const {idealforText, payroll, taxforms, statements, utilitybills, directmail, securefoldImage, securefoldAltText,  securefoldBtn, securefoldTitle} = Astro.props;
 import "../../styles/styles.scss";
 ---
