--- a/src/components/Products/FeaturedProducts.astro
+++ b/src/components/Products/FeaturedProducts.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 const {
     featureProductsHeader, 
     pressuresealTitle, 
@@ -20,17 +21,26 @@ const {
     <h2>{featureProductsHeader}</h2>
     <section>
         <h3>{pressuresealTitle}</h3>
-        <img src={pressuresealImage} alt={pressureSealAltText}>
+        <Image 
+            src={pressuresealImage} 
+            alt={pressureSealAltText}
+            inferSize={true}/>
         <a href="/pressure-seal-forms">{pressuresealBtn}</a>
     </section>
     <section>
         <h3>{linerlessTitle}</h3>
-        <img src={linerlessImage} alt={linerlessLabelAltText}>
+        <Image 
+            src={linerlessImage} 
+            alt={linerlessLabelAltText}
+            inferSize={true}/>
         <a href="/linerless-labels">{linerlessBtn}</a>
     </section>
     <section>
         <h3>{integratedformTitle}</h3>
-        <img src={integratedformImage} alt={integratedFormAltText}>
+        <Image 
+            src={integratedformImage} 
+            alt={integratedFormAltText}
+            inferSize={true}/>
         <a href="/integrated-form-labels">{integratedformBtn}</a>
     </section>
 </div>
