--- a/src/components/Products/MoreProducts.astro
+++ b/src/components/Products/MoreProducts.astro
@@ -40,9 +40,50 @@ const {
     daytodayText,
     regularText,
     availableoptionsText,
-    regularwindowText
+    regularwindowText,
+    ProductsHeader,
+    ProductsImage,
+    ProductDesc,
+    About,
+    AboutDesc,
+    ChooseFrom,
+    ChooseFromList1,
+    ChooseFromList2,
+    ChooseFromList3,
+    ChooseFromList4,
+    ChooseFromList5,
+    IdealFor,
+    IdealForList1,
+    IdealForList2,
+    IdealForList3,
+    IdealForList4,
+    IdealForList5
 } = Astro.props;
 ---
+
+<!-- <div>
+    <h2>{ProductsHeader}</h2>
+    <img src={ProductsImage} alt="qwe">
+    <p>{ProductDesc}</p>
+    <p>{About}</p>
+    <p>{AboutDesc}</p>
+    <p>{ChooseFrom}</p>
+    <ul>
+        <li>{ChooseFromList1}</li>
+        <li>{ChooseFromList2}</li>
+        <li>{ChooseFromList3}</li>
+        <li>{ChooseFromList4}</li>
+        <li>{ChooseFromList5}</li>
+    </ul>
+    <p>{IdealFor}</p>
+    <ul>
+        <li>{IdealForList1}</li>
+        <li>{IdealForList2}</li>
+        <li>{IdealForList3}</li>
+        <li>{IdealForList4}</li>
+        <li>{IdealForList5}</li>
+    </ul>
+</div> -->
 
 <div>
     <h2>{moreproductsHeader}</h2>
@@ -115,3 +156,4 @@ const {
         </div>
     </section>
 </div>
+
