--- a/src/pages/online-services.astro
+++ b/src/pages/online-services.astro
@@ -50,6 +50,14 @@ const { servicePortalImage: {
 	url: servicePortalImage
 }} = servicesTypesData;
 
+// const { servicePortalImage: {
+// 	formats: {
+//     small: {
+//       url: servicePortalImage
+//     }
+//   }
+// }} = servicesTypesData;
+
 const { servicePoofingImage: {
 	url: servicePoofingImage
 }} = servicesTypesData;
