--- a/src/components/AboutUs/Hero.astro
+++ b/src/components/AboutUs/Hero.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 const {aboutUsHeroHeader, aboutUsHeroDesc, aboutUsHeroImg, aboutUsAltText, smartPrintingText ,trustedExpertiseText, canadianBasedText} = Astro.props;
 import "../../styles/styles.scss";
 ---
@@ -6,7 +7,10 @@ import "../../styles/styles.scss";
 <div class="about-banner">
     <div class="about-hero">
         <h1>{aboutUsHeroHeader}</h1>
-        <img src={aboutUsHeroImg} alt={aboutUsAltText}>
+        <Image 
+            src={aboutUsHeroImg} 
+            alt={aboutUsAltText}
+            inferSize={true}/>
         <div class="hero-tag">
             <p>{smartPrintingText}</p>
             <p>{trustedExpertiseText}</p>
