--- a/src/components/HomePage/About.astro
+++ b/src/components/HomePage/About.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 const {aboutHeader, aboutImage, aboutText, requestQuoteBtn, aboutAltText, contactUsBtn } = Astro.props;
 
 
@@ -6,7 +7,10 @@ const {aboutHeader, aboutImage, aboutText, requestQuoteBtn, aboutAltText, contac
 
 <div>
     <h2>{aboutHeader}</h2>
-    <img src={aboutImage} alt={aboutAltText}>
+        <Image 
+            src={aboutImage} 
+            alt={aboutAltText}
+            inferSize={true}/>
     <p>{aboutText}</p>
     <a href="#">{requestQuoteBtn}</a>
     <a href="#">{contactUsBtn}</a>
