--- a/src/components/HomePage/HighQuality.astro
+++ b/src/components/HomePage/HighQuality.astro
@@ -1,10 +1,13 @@
 ---
-
+import { Image } from 'astro:assets';
 const {highQualityHeader, highQualityImage, highQualityText, highQualityAltText, highQualityBtn } = Astro.props;
 ---
 
 <div>
-    <img src={highQualityImage} alt={highQualityAltText}>
+    <Image 
+        src={highQualityImage} 
+        alt={highQualityAltText}
+        inferSize={true}/>
     <h2>{highQualityHeader}</h2>
     <p>{highQualityText}</p>
     <a href="#">{highQualityBtn}</a>
