--- a/src/components/Products/FeaturedProducts.astro
+++ b/src/components/Products/FeaturedProducts.astro
@@ -17,20 +17,25 @@ const {
 ---
 
 <div>
-    <h2>{featureProductsHeader}</h2>
-    <section>
-        <h3>{pressuresealTitle}</h3>
-        <img src={pressuresealImage} alt={pressureSealAltText}>
-        <a href="/pressure-seal-forms">{pressuresealBtn}</a>
-    </section>
-    <section>
-        <h3>{linerlessTitle}</h3>
-        <img src={linerlessImage} alt={linerlessLabelAltText}>
-        <a href="/linerless-labels">{linerlessBtn}</a>
-    </section>
-    <section>
-        <h3>{integratedformTitle}</h3>
-        <img src={integratedformImage} alt={integratedFormAltText}>
-        <a href="/integrated-form-labels">{integratedformBtn}</a>
-    </section>
+    <h2 class="featured-products-h1">{featureProductsHeader}</h2>
+    
+    <div class="featured-products-bg">
+        <div class="products-container">
+            <section>
+                <h3>{pressuresealTitle}</h3>
+                <img src={pressuresealImage} alt={pressureSealAltText}>
+                <a href="/pressure-seal-forms" class="featured-btn">{pressuresealBtn}</a>
+            </section>
+            <section>
+                <h3>{linerlessTitle}</h3>
+                <img src={linerlessImage} alt={linerlessLabelAltText}>
+                <a href="/linerless-labels" class="featured-btn">{linerlessBtn}</a>
+            </section>
+            <section>
+                <h3>{integratedformTitle}</h3>
+                <img src={integratedformImage} alt={integratedFormAltText}>
+                <a href="/integrated-form-labels" class="featured-btn">{integratedformBtn}</a>
+            </section>
+        </div>
+    </div>
 </div>
