--- a/src/components/Products/MoreProducts.astro
+++ b/src/components/Products/MoreProducts.astro
@@ -44,7 +44,7 @@ const {
 } = Astro.props;
 ---
 
-<div>
+<div class="more-products-section">
     <h2>{moreproductsHeader}</h2>
     <section>
         <h3>{lasercutTitle}</h3>
