--- a/src/styles/_products-page.scss
+++ b/src/styles/_products-page.scss
@@ -27,6 +27,96 @@
 }
 
 
+.featured-products-h1{
+    @include yellow-header-products;
+    margin-top: 96px;
+}
+.featured-products-bg{
+  background-color: $tertiary-dark-blue;
+  border-radius: 15px;
+}
+.products-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 700px;
+    margin: 0 auto;
+    align-items: center;
+
+       img {
+        display: block;
+        width: calc(100% + 2rem);
+        max-width: 400px;
+        margin-left: -1rem;
+        margin-right: -1rem;
+        min-height: 180px;
+        border-radius: 15px;
+        margin: 0 auto;
+    }
+}
+
+.products-container h3{
+    margin: 1rem 0 1rem 0;
+    color: $white;
+    
+}
+
+.featured-btn{
+    @include  btn ($white, $tertiary-dark-blue, #FFEDAD);
+    display: block;
+    max-width: 290px;   
+    margin: 0 auto;
+    
+    
+}
+
+.more-products-section{
+    @include products-hero-card($primary-blue);
+    margin: 96px 0 96px 0;
+    border-radius: 0;
+
+}
 @media(min-width:1000px){
 
+    .products-banner {
+        background-image: url("https://stylish-dinosaurs-39d17e40aa.media.strapiapp.com/products_hero_8adc45541a.webp");
+        background-size: cover;
+        background-position: center;
+        padding: 1rem;
+        max-width: 1920px;
+        margin: 0 auto;
+    }
+
+    .products-hero {
+        padding: 0 2rem 2rem 2rem;
+        max-width: unset;
+        width: 763px;
+        border-radius: 15px;
+        margin: 9rem 0 9rem 10vw;
+
+        img {
+            display: none;
+        }
+
+        .service-btn {
+            width: 288px;
+        }
+    }
+
+    .featured-products-bg{
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 1rem;
+    }
+    .products-container{
+        flex-direction: row;
+        max-width: 0;
+        margin: 0;
+    }
+    .products-container section:nth-child(1){
+        grid-column: 3/ span 2;
+    }
+      .products-container section:nth-child(2){
+        grid-column: 6/ span 2;
+    }
 }
