added desc fields in products page

--- a/src/components/PressureSeal/SecureFold.astro
+++ b/src/components/PressureSeal/SecureFold.astro
@@ -21,6 +21,10 @@ import "../../styles/styles.scss";
             <a href="/request-quote" class="featured-products-btn">{securefoldBtn}</a>
         </div>
         <div>
+        <Image 
+            src={securefoldImage} 
+            alt={securefoldAltText}
+            inferSize={true}/>
             <img src={securefoldImage} alt={securefoldAltText}>
         </div>
     </div>
