--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -40,7 +40,10 @@ const {
     linerlessTitle,
     linerlessBtn,
     integratedformTitle,
-    integratedformBtn
+    integratedformBtn,
+    pressuresealDesc,
+    linerlessDesc,
+    integratedformDesc
     } = featuredproductData;
 
 const { pressuresealImage: {
@@ -185,7 +188,8 @@ const { featuredpromoImage: {
     {featureProductsHeader} {pressuresealTitle} {pressuresealImage} {pressuresealBtn} 
     {linerlessTitle} {linerlessImage} {linerlessBtn} 
     {integratedformTitle} {integratedformImage} {integratedformBtn}
-    {pressureSealAltText} {linerlessLabelAltText} {integratedFormAltText}/>
+    {pressureSealAltText} {linerlessLabelAltText} {integratedFormAltText}
+    {pressuresealDesc} {linerlessDesc} {integratedformDesc}/>
 
     <MoreProducts {moreproductsHeader} {lasercutTitle} {lasercutImage} {snapsetImage} {continuousImage} {customenvelopeImage}
     {highqualitylaserTitle} {lasercutText} 
