added more styling to products page(featured section + promo products)

--- a/src/components/Products/MoreProducts.astro
+++ b/src/components/Products/MoreProducts.astro
@@ -85,7 +85,7 @@ const {
     </ul>
 </div> -->
 
-<div>
+<div class="more-products-section">
     <h2>{moreproductsHeader}</h2>
     <section>
         <h3>{lasercutTitle}</h3>
