--- a/src/components/Products/PromoProducts.astro
+++ b/src/components/Products/PromoProducts.astro
@@ -3,12 +3,16 @@ import { Image } from 'astro:assets';
 const {featuredpromoTitle, featuredpromoBtn, featuredpromoText, featuredpromoImage, featuredpromoAltText} = Astro.props;
 ---
 
-<div>
-    <h2>{featuredpromoTitle}</h2>
-    <p>{featuredpromoText}</p>
-        <Image 
-            src={featuredpromoImage} 
-            alt={featuredpromoAltText}
-            inferSize={true}/>
-    <a href="#">{featuredpromoBtn}</a>
+<div class="promo-products-container">
+    <div>
+        <h2>{featuredpromoTitle}</h2>
+        <p>{featuredpromoText}</p>
+        <a href="#" class="promo-btn">{featuredpromoBtn}</a>
+    </div>
+        <div>
+            <Image
+                src={featuredpromoImage}
+                alt={featuredpromoAltText}
+                inferSize={true}/>
+        </div>
 </div>
