--- a/src/styles/_products-page.scss
+++ b/src/styles/_products-page.scss
@@ -26,48 +26,39 @@
 
 }
 
-
-.featured-products-h1{
+.featured-h2-grid{
     @include yellow-header-products;
     margin-top: 96px;
 }
 .featured-products-bg{
-  background-color: $tertiary-dark-blue;
-  border-radius: 15px;
+ @include products-hero-card($tertiary-dark-blue)  
 }
+
+
 .products-container{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    max-width: 700px;
-    margin: 0 auto;
+   
     align-items: center;
 
        img {
         display: block;
         width: calc(100% + 2rem);
-        max-width: 400px;
-        margin-left: -1rem;
-        margin-right: -1rem;
         min-height: 180px;
         border-radius: 15px;
         margin: 0 auto;
-    }
-}
+        align-items: center;
+        }
 
-.products-container h3{
-    margin: 1rem 0 1rem 0;
-    color: $white;
-    
-}
+       h3{
+        padding: 2rem 0 1rem 0;
+        color: $white;
+        }
 
+}
 .featured-btn{
     @include  btn ($white, $tertiary-dark-blue, #FFEDAD);
     display: block;
-    max-width: 290px;   
-    margin: 0 auto;
-    
-    
+    max-width: 100%; 
+    margin-top: 1rem
 }
 
 .more-products-section{
@@ -76,7 +67,31 @@
     border-radius: 0;
 
 }
-@media(min-width:1000px){
+
+.promo-products-container{
+    
+    @include products-hero-card($tertiary-dark-blue);
+    margin-bottom: 96px;
+       h2, p{
+        color: $white;
+        padding-top: 1rem;
+       }
+       img {
+        width: calc(100% + 2rem);
+        min-height: 180px;
+        border-radius: 15px;
+        margin: 0 auto;
+    }
+
+    .promo-btn{
+        @include btn ($white, $tertiary-dark-blue, #FFEDAD);
+        display: block;
+        max-width: 400px;   
+        margin: 1rem auto 1rem 0;
+    }
+
+}
+@media(min-width:1200px){
 
     .products-banner {
         background-image: url("https://stylish-dinosaurs-39d17e40aa.media.strapiapp.com/products_hero_8adc45541a.webp");
@@ -103,20 +118,56 @@
         }
     }
 
-    .featured-products-bg{
+    .featured-h2-grid{
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         gap: 1rem;
+
+        h2{
+            grid-column: 5 / span 10;
+        }
+    }
+   
+
+    .featured-products-bg{
+        margin: 0 150px 0 150px;
     }
     .products-container{
-        flex-direction: row;
-        max-width: 0;
-        margin: 0;
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        gap: 1rem;
+        max-width: unset;
     }
+   
     .products-container section:nth-child(1){
-        grid-column: 3/ span 2;
+        grid-column: 2 / span 2;
     }
-      .products-container section:nth-child(2){
-        grid-column: 6/ span 2;
+    .products-container section:nth-child(2){
+        grid-column: 5 / span 2;
     }
+     .products-container section:nth-child(3){
+        grid-column: 8 / span 2;
+    }
+    .products-container section img{
+        max-width: 300px;
+        width: 100%;
+        height: 277px;
+    }
+
+    .promo-products-container{
+        display: grid;
+        grid-template-columns: repeat(10,1fr);
+        margin: 0 150px 96px 150px;
+        align-items: center;
+
+        div:nth-child(1){
+            grid-column: 2 / span 3;
+        }
+
+        div:nth-child(2){
+            grid-column: 6 / span 4;
+            align-items: center;
+        }
+    }
+    
 }
